소스코드/spyder_crash.log
Traceback (most recent call last):
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\app\mainwindow.py", line 2989, in main
    mainwindow = run_spyder(app, options, args)
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\app\mainwindow.py", line 2893, in run_spyder
    main.setup()
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\app\mainwindow.py", line 859, in setup
    from spyder.plugins.externalconsole import ExternalConsole
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\plugins\externalconsole.py", line 39, in <module>
    from spyder.widgets.externalshell.pythonshell import ExternalPythonShell
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\widgets\externalshell\pythonshell.py", line 34, in <module>
    from spyder.widgets.variableexplorer.namespacebrowser import NamespaceBrowser
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\spyder\widgets\variableexplorer\namespacebrowser.py", line 26, in <module>
    import ipykernel.pickleutil
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\ipykernel\__init__.py", line 2, in <module>
    from .connect import *
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\ipykernel\connect.py", line 13, in <module>
    from IPython.core.profiledir import ProfileDir
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\IPython\__init__.py", line 49, in <module>
    from .terminal.embed import embed
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\IPython\terminal\embed.py", line 16, in <module>
    from IPython.core.interactiveshell import DummyMod, InteractiveShell
  File "C:\Anaconda3\envs\tensorflow35\lib\site-packages\IPython\core\interactiveshell.py", line 2881
    l                exec(code_obj, self.user_global_ns, self.user_ns)
                                                                     ^
IndentationError: unexpected unindent
